Using native HTML hyperlinks for bookmark/link navigation

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -20,6 +20,7 @@ body {
   top: 0px;
   height: 40px;
   width: 100%;
+  z-index: 1;
 }
 
 .separator {
@@ -67,6 +68,7 @@ span#info {
   transition: left 0.25s ease-in-out 1s;
   -moz-transition: left 0.25s ease-in-out 1s;
   -webkit-transition: left 0.25s ease-in-out 1s;
+  z-index: 1;
 }
 
 #sidebar:hover {
@@ -180,6 +182,20 @@ canvas {
   width: 816px;
   height: 1056px;
   margin: 10px auto;
+  position:relative;
+}
+
+.page > a {
+  display: block;
+  position: absolute;
+}
+
+.page > a:hover {
+  opacity: 0.2;
+  background: #ff0;
+  box-shadow: 0px 2px 10px #ff0;
+  -moz-box-shadow: 0px 2px 10px #ff0;
+  -webkit-box-shadow: 0px 2px 10px #ff0;
 }
 
 #viewer {
