--- a/web/viewer.css
+++ b/web/viewer.css
@@ -230,6 +230,14 @@ canvas {
   -webkit-box-shadow: 0px 2px 10px #ff0;
 }
 
+#pageWidthOption {
+  border-top: 1px solid black;
+}
+
+#customScaleOption:not([data-scale]) {
+  display: none;
+}
+
 /* === Printed media overrides === */
 @media print {
   #sidebar {
