Make firstrun looks faster

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -215,6 +215,7 @@ canvas {
   box-shadow: 0px 4px 10px #000;
   -moz-box-shadow: 0px 4px 10px #000;
   -webkit-box-shadow: 0px 4px 10px #000;
+  background-color: white;
 }
 
 .page > a {
