--- a/web/viewer.css
+++ b/web/viewer.css
@@ -231,6 +231,21 @@ canvas {
   -webkit-box-shadow: 0px 2px 10px #ff0;
 }
 
+.textLayer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  color: #000;
+}
+
+.textLayer > div {
+  color: transparent;
+  position: absolute;
+  line-height:1.3;
+}
+
 #viewer {
   margin: 44px 0px 0px;
   padding: 8px 0px;
