--- a/web/viewer.css
+++ b/web/viewer.css
@@ -246,6 +246,12 @@ canvas {
   line-height:1.3;
 }
 
+::selection { background:rgba(0,0,255,0.3); }
+::-moz-selection { background:rgba(0,0,255,0.3); }
+/* TODO: file FF bug to support ::-moz-selection:window-inactive
+   so we can override the opaque grey background when the window is inactive;
+   see also http://css-tricks.com/9288-window-inactive-styling */
+
 #viewer {
   margin: 44px 0px 0px;
   padding: 8px 0px;
