--- a/web/viewer.css
+++ b/web/viewer.css
@@ -18,7 +18,15 @@ body {
   background-color: rgba(238,238,238,0.5);
   background: -moz-linear-gradient(center bottom, rgba(238,238,238,0.5) 0%, rgba(255,255,255,0.5) 100%);
   background: -webkit-gradient(linear, left bottom, left top, color-stop(0.0, rgba(200,200,200,0.5)), color-stop(1.0, rgba(255,255,255,0.5)));
-  border: 1px solid #666;
+  border-top: 1px solid #999;
+  border-left: 1px solid #999;
+  border-right: 1px solid #999;
+  border-top-left-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  -webkit-border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  -moz-border-radius-topleft: 4px;
+  -webkit-border-top-right-radius: 4px;
   white-space:nowrap;
   overflow: hidden;
   height: 32px;
