--- a/web/viewer.css
+++ b/web/viewer.css
@@ -247,6 +247,39 @@ canvas {
   line-height:1.3;
 }
 
+.annotComment > div {
+  position: absolute;
+}
+
+.annotComment > .annotImageComment {
+  background: transparent url('./images/text.svg') no-repeat left top;
+  background-size: 75% 75%;
+}
+
+.annotComment > .annotImageCheck {
+  background: transparent url('./images/check.svg') no-repeat left top;
+  background-size: 75% 75%;
+}
+
+.annotComment > .annotImage:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.annotComment > .annotDetails {
+  display: none;
+  padding: 0.2em;
+  max-width: 20em;
+  background-color: #F1E47B;
+}
+
+.annotComment > .annotDetails > h1 {
+  font-weight: normal;
+  font-size: 1.2em;
+  border-bottom: 1px solid #000000;
+  margin: 0px;
+}
+
 /* TODO: file FF bug to support ::-moz-selection:window-inactive
    so we can override the opaque grey background when the window is inactive;
    see https://bugzilla.mozilla.org/show_bug.cgi?id=706209 */
