Show animated loading icon if page renders slow

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -235,6 +235,20 @@ canvas {
   -webkit-box-shadow: 0px 2px 10px #ff0;
 }
 
+.loadingIcon {
+  position: absolute;
+  display: none;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  background: url('images/loading-icon.gif') center no-repeat; */
+}
+
+.loadingIcon.show {
+  display: block;
+}
+
 .textLayer {
   position: absolute;
   left: 0;
