--- a/web/viewer.css
+++ b/web/viewer.css
@@ -242,7 +242,7 @@ canvas {
   top: 0;
   right: 0;
   bottom: 0;
-  background: url('images/loading-icon.gif') center no-repeat; */
+  background: url('images/loading-icon.gif') center no-repeat;
 }
 
 .textLayer {
